# arctos_moveit_config

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: arctos.ros2_control.xacro  arctos.srdf  arctos.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d-remove.yaml
launch/: obstacle_avoidance_demo.launch.py
src/: realsense_to_moveit_node-figuring-out-motion.txt  realsense_to_moveit_node-fill.txt  realsense_to_moveit_node-motion-working.txt  realsense_to_moveit_node-parallel.txt  realsense_to_moveit_node.cpp  serial_joint_state_publisher.cpp
